cmake_minimum_required(VERSION 3.17)
project(C_Test C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Test hello_world.c)
add_executable(001 algorithm/0-10/001.c)
add_executable(002 algorithm/0-10/002.c)
add_executable(003 algorithm/0-10/003.c)
add_executable(004 algorithm/0-10/004.c)
add_executable(005 algorithm/0-10/005.c)
add_executable(006 algorithm/0-10/006.c)
add_executable(007 algorithm/0-10/007.c)
add_executable(008 algorithm/0-10/008.c)
add_executable(009 algorithm/0-10/009.c)
add_executable(010 algorithm/0-10/010.c)
add_executable(011 algorithm/11-20/011.c)
add_executable(012 algorithm/11-20/012.c)
add_executable(013 algorithm/11-20/013.c)
add_executable(014 algorithm/11-20/014.c)
add_executable(015 algorithm/11-20/015.c)
add_executable(016 algorithm/11-20/016.c)
add_executable(017 algorithm/11-20/017.c)
add_executable(018 algorithm/11-20/018.c)
add_executable(019 algorithm/11-20/019.c)
add_executable(020 algorithm/11-20/020.c)
add_executable(021 algorithm/21-30/021.c)
add_executable(022 algorithm/21-30/022.c)
add_executable(023 algorithm/21-30/023.c)
add_executable(024 algorithm/21-30/024.c)
add_executable(025 algorithm/21-30/025.c)
add_executable(026 algorithm/21-30/026.c)
add_executable(027 algorithm/21-30/027.c)
add_executable(028 algorithm/21-30/028.c)
add_executable(029 algorithm/21-30/029.c)
add_executable(030 algorithm/21-30/030.c)